fix issue by waiting for server per max schmitt's tip

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,8 @@ playwright = "*"
 pytest = "*"
 pytest-playwright = "*"
 pytest-env = "*"
+polling2 = "*"
+requests = "*"
 
 [requires]
 python_version = "3.9"
